--- a/src/templates/pages/organizaciones.html
+++ b/src/templates/pages/organizaciones.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/src/static/styles/style.css">
     <link rel="stylesheet" href="/src/static/styles/css/organizaciones.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-material-ui/material-ui.css">
 </head>
 <body>
     <header>
@@ -53,7 +54,7 @@
                     </tbody>
                 </table>
             </div>
-            <button onclick="window.location.href='/nuevaOrganizacion'" class="btn-crear">
+            <button class="btn-crear">
                 <i class="fas fa-plus"></i>
                 Crear organización
             </button>
@@ -68,6 +69,7 @@
     </footer>
 
     <script src="/src/static/scripts/js/organizaciones.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
 
