--- a/src/templates/pages/proyectos.html
+++ b/src/templates/pages/proyectos.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/src/static/styles/style.css">
     <link rel="stylesheet" href="/src/static/styles/css/proyectos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-material-ui/material-ui.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
@@ -36,10 +38,10 @@
     </nav>
 
     <main class="container">
-        <a href="/nuevoProyecto" class="btn-crear">
+        <button class="btn-crear">
             <i class="fas fa-plus"></i>
             Crear proyecto
-        </a>
+        </button>
         <h2>Proyectos Activos</h2>
         <div class="filter-container">
             <label for="category-filter">Filtrar por categoría:</label>
