Avance con adicion de donacion

--- a/src/templates/pages/donar.html
+++ b/src/templates/pages/donar.html
@@ -45,11 +45,14 @@
                     Tipo de ayuda
                 </label>
                 <select id="tipo_ayuda" required>
-                    <option value="">Seleccione el tipo de ayuda</option>
-                    <option value="salud">Salud</option>
-                    <option value="alimentaria">Alimentaria</option>
-                    <option value="educativa">Educativa</option>
-                    <option value="vivienda">Vivienda</option>
+                    <option value="">Seleccione una categoría</option>
+                            <option value="educacion">Educación</option>
+                            <option value="salud">Salud</option>
+                            <option value="medio_ambiente">Medio Ambiente</option>
+                            <option value="tecnologia">Tecnología</option>
+                            <option value="cultura">Cultura</option>
+                            <option value="deporte">Deporte</option>
+                            <option value="social">Social</option>
                 </select>
             </div>
 
@@ -59,7 +62,7 @@
                     Seleccione la organización
                 </label>
                 <select id="organizacion" required>
-                    <option value="">Primero seleccione un tipo de ayuda</option>
+                    <option value="">Seleccione la organización</option>
                 </select>
             </div>
 
