--- a/src/templates/pages/nuevaOR.html
+++ b/src/templates/pages/nuevaOR.html
@@ -54,6 +54,9 @@
                             <option value="salud">Salud</option>
                             <option value="ambiente">Medio Ambiente</option>
                             <option value="social">Desarrollo Social</option>
+                            <option value="cultura">Cultura</option>
+                            <option value="deporte">Deporte</option>
+                            <option value="social">Social</option>
                         </select>
                     </div>
                     
